Updated to use Contactus form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <!--<li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -66,7 +66,7 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>-->
         </ul>
       </nav><!-- .navbar -->
 
@@ -127,7 +127,7 @@
           </div>
 
           <div class="col-lg-5" data-aos="fade">
-            <form action="forms/quote.php" method="post" class="php-email-form">
+            <form action="https://formspree.io/admin@c-3.info" method="POST" class="php-email-form">
               <h3>Get in touch</h3>
               <p>We are a private non profit group open to those of South Asian Decent and thier families.</p>
               <div class="row gy-3">
@@ -217,7 +217,7 @@
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
                     <h4 class="card-title">Working Women</h4>
-                    <p>Between a full time job and a demanding family its hard to find "Me" time. With multiple groups doing multiple things every week it's easier to find a time to sneak away and laugh a bit with other going through the same thing</p>
+                    <p>Between a full time job and a demanding family its hard to find "Me" time. With multiple groups doing multiple things every week it's easier to find a time to sneak away and laugh a bit with others going through the same thing</p>
                   </div>
                 </div>
               </div>
@@ -258,7 +258,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-person-pregnant"></i>
                     </div>
                     <h3>Pregnant Mom's</h3>
                     <p>Supporting Moms as they start on the adventure.</p>
@@ -268,7 +268,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-baby"></i>
                     </div>
                     <h3>Moms with Infants 0-3 years</h3>
                     <p>No sleep, Diapers and the tendency to use baby talk. Who woundnt need a group to share the pain.</p>
@@ -278,7 +278,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-child"></i>
                     </div>
                     <h3>Moms with kids 4 to 8 years</h3>
                     <p>Why, Why, Why, Why Because we said so.</p>
@@ -288,7 +288,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-pizza-slice"></i>
                     </div>
                     <h3>Moms with boys 8 to 17 years</h3>
                     <p>Let the fun begin, finally old enough to let mom take some time to hang with the girls.</p>
@@ -298,7 +298,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-camera"></i>
                     </div>
                     <h3>Moms with girl's 8 to 17 years</h3>
                     <p>Finally old enough to shop. Let the Drama begin.</p>
@@ -308,7 +308,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-smile-beam"></i>
                     </div>
                     <h3>Moms with adult kids</h3>
                     <p>They are out of the house ... now what do I do?</p>
@@ -318,7 +318,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-music"></i>
                     </div>
                     <h3>Karoake</h3>
                     <p>Meets up once a month to sing our hearts out. Occasionally we even do it in tune</p>
@@ -328,7 +328,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-highlighter"></i>
                     </div>
                     <h3>Crafts</h3>
                     <p>Painting Finger Nails is a craft right?</p>
@@ -338,7 +338,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-plane"></i>
                     </div>
                     <h3>Travel</h3>
                     <p>Who you travel with can be more important than your destination.</p>
@@ -348,7 +348,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-bug"></i>
                     </div>
                     <h3>Garden</h3>
                     <p>Dirt under your nails isn't always bad.</p>
@@ -358,7 +358,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-users"></i>
                     </div>
                     <h3>Single Mom's</h3>
                     <p>Not sure how we find time to meet but join us and we'll figure it out.'</p>
@@ -368,7 +368,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-female"></i>
                     </div>
                     <h3>Dance</h3>
                     <p>From Hollywood to Bollywood and everything in between.</p>
@@ -378,7 +378,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-book"></i>
                     </div>
                     <h3>Book Club</h3>
                     <p>We really arent as boring as everyone thinks we are.</p>
@@ -388,7 +388,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-people-carry"></i>
                     </div>
                     <h3>Social Work</h3>
                     <p>Someone has to figure out how to stop the madness.</p>
@@ -398,7 +398,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-running"></i>
                     </div>
                     <h3>Fun and Fitness</h3>
                     <p>Fitness is more fun when you have someone else to harrass.</p>
@@ -408,7 +408,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-pepper-hot"></i>
                     </div>
                     <h3>Cooking</h3>
                     <p>Something everyone does but few do well. Up your skills with the Girls of C3</p>
@@ -418,7 +418,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-house"></i>
                     </div>
                     <h3>Stay at home moms</h3>
                     <p>Cause stay at home doesnt actually mean stay at HOME</p>
@@ -428,7 +428,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-baby-carriage"></i>
                     </div>
                     <h3>Infertility Support</h3>
                     <p>Life can be hard but its still better with friends.</p>
@@ -438,7 +438,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-money-bill"></i>
                     </div>
                     <h3>Fabulous Fifties and Beyond</h3>
                     <p>Because we finally have the money to do what we want.</p>
@@ -448,17 +448,17 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-blind"></i>
                     </div>
                     <h3>Golden Jewels</h3>
-                    <p>Because when the Inlaws come to visit I need to get them out of my house.</p>
+                    <p>Because when the Inlaws come to visit, it's nice to get them out of my house for a bit.</p>
                     <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
                 </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </div>
                     <h3>Special Needs Lovelies</h3>
                     <p>Life can be hard but its still better with friends.</p>
@@ -468,7 +468,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-trophy"></i>
                     </div>
                     <h3>Card Games</h3>
                     <p>We'd join fun and fitness but this is more relaxing.'</p>
@@ -478,7 +478,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-person"></i>
                     </div>
                     <h3>Singlets</h3>
                     <p>Single and free to do what we enjoy.</p>
@@ -488,7 +488,7 @@
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="service-item  position-relative">
                     <div class="icon">
-                        <i class="fa-solid fa-mountain-city"></i>
+                        <i class="fa-solid fa-birthday-cake"></i>
                     </div>
                     <h3>Monthly Birthday groups</h3>
                     <p>1 group for each month so we can go out and celebrate together.</p>
