Updated the Form

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </div>
 
           <div class="col-lg-5" data-aos="fade">
-            <form action="https://formspree.io/admin@c-3.info" method="POST" class="php-email-form">
+            <form action="https://formspree.io/f/xqkjlnqa" method="POST" class="php-email-form">
               <h3>Get in touch</h3>
               <p>We are a private non profit group open to those of South Asian Decent and thier families.</p>
               <div class="row gy-3">
