--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="./TroopC3">Troop C3</a></li>
           <!--<li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="projects.html">Projects</a></li>
