--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-up">
               <div class="content">
                   <h3>A South Asian Family for North Dallas.</h3>
-                  <p>Growing up in South Asia you are never alone there is always family around cousins, aunties, uncles not to mention the neighbors and friends. Communities watched out for one another. If you were new in the area they would be pepper you with questions till they figure out how you plug into the community. Eventually they will determine who you know that they know or who you know that someone they know might know.</p>
+                  <p>Growing up in South Asia you are never alone there is always family around cousins, aunties, uncles not to mention the neighbors and friends. Communities watched out for one another. If you were new in the area they would pepper you with questions till they figure out how you plug into the community. Eventually they will determine who you know that they know or who you know that someone they know might know.</p>
                   <p>Then comes the day of the big move and suddenly there is no family no friends no one that connects and decides how you fit in. Months or even years may pass without a single connection.</p>
                   <p>C3 tries to fix that. Through Community in small and large groups, National holidays celebrations, karaoke, Movie Nights and of course lots of Chai.</p>
               </div>
