--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-        </ul>
-      </nav><!-- .navbar -->
+
 
     </div>
   </header><!-- End Header -->
@@ -61,7 +57,7 @@
                 <h2 data-aos="fade-down">Welcome to <span>C3</span></h2>
                 <h3 data-aos="fade-down">North Dallas</h3>
                 <p data-aos="fade-up">Chai and chit chat started in the wake of the pandemic. After months of being home alone a group decided to get together for chai at a local restaurant. What came out of that was a desire to start a community where South Asians help and support one another as they try to navigate life in a world gone mad.</p>
-                <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Get Started</a>
+                <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">About us</a>
             </div>
         </div>
       </div>
@@ -97,41 +93,29 @@
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-up">
               <div class="content">
-                  <h3>A South Asian Family for North Dallas.</h3>
-                  <p>Growing up in South Asia you are never alone there is always family around cousins, aunties, uncles not to mention the neighbors and friends. Communities watched out for one another. If you were new in the area they would pepper you with questions till they figure out how you plug into the community. Eventually they will determine who you know that they know or who you know that someone they know might know.</p>
-                  <p>Then comes the day of the big move and suddenly there is no family no friends no one that connects and decides how you fit in. Months or even years may pass without a single connection.</p>
-                  <p>C3 tries to fix that. Through Community in small and large groups, National holidays celebrations, karaoke, Movie Nights and of course lots of Chai.</p>
-              </div>
+                  <h3>About Chai and Chit Chat (C3)</h3>
+                  <p>Chai and Chit Chat (C3) is more than a community—it’s a movement of connection, celebration, and empowerment for Desi women in North Dallas and beyond. Founded in 2021 by the visionary Mercy Strickland, C3 began as a simple potluck gathering and has since blossomed into a thriving 501(c)(3) nonprofit organization with over 5,000 members and nearly 60 subgroups.</p>
+                  <p>At C3, we believe in the power of shared experiences and collective growth. Guided by our motto—“Fostering Friendship, Building Community, and Uplifting Together”—we bring together women from diverse backgrounds to share their passions, navigate challenges, and celebrate life’s milestones.</p>
+                  <h4>What We Offer</h4>
+                  <p>C3 is a welcoming space where women can:</p>
+                  <p>1. Explore interests through dedicated subgroups, including cooking, fitness, travel, crafts, social work, dance, and karaoke.</p>
+                  <p>2. Find support and solidarity in specialized groups for single moms, soul sisters, and job seekers</p>
+                  <p>3. Build lasting connections through vibrant events, activities, and meetups.</p>
+                  <p>With no membership fees and a commitment to inclusivity, C3 ensures that every Desi woman has a place to belong and thrive.</p>
+                  <h4>Our Leadership</h4>
+                  <p>Mercy Strickland’s compassionate leadership has been the driving force behind C3’s success. Her journey, marked by a courageous move across the Atlantic, is a testament to her commitment to creating a safe haven for Desi women in a foreign land. Beyond her organizational efforts, Mercy discreetly supports women facing domestic challenges, offering them the resources and empowerment to reclaim their lives.</p>
+                  <h4>Our Vision</h4>
+                  <p>C3 is built on the belief that small, meaningful actions can create powerful transformations. We aim to foster a legacy of friendship, support, and empowerment for generations of desi women to come. At C3, we’re turning dreams into realities, challenges into triumphs, and connections into lifelong bonds.</p>
+                  <p>Join us as we continue to grow, inspire, and uplift—together.</p>
+                  <h3>How to Join C3</h3>
+                  <p>Interested in becoming part of our vibrant community? Then be sure to attend our in-person <b>Newcomer’s Meetup</b>, held every Sunday and announced in the C3 Facebook group. This in-person session gives you a warm introduction to our mission, activities, and fellow members.
+                  <p>After attending the meetup, you’ll be added to our <b>C3 WhatsApp Group</b>. If you reside in a city with its own dedicated group, you’ll be added to that specific group as well. The main group acts as your gateway to all C3 subgroups, which cater to a variety of interests and community outreach initiatives.</p>
+                  <p>Each main group and subgroup is led by an administrator who guides members and organizes activities. Once you’re part of the main group, you’re free to explore and join a limited number of subgroups that align with your interests. Additionally, the main group hosts monthly activities throughout the year, providing even more opportunities to connect, share, and grow within the vibrant C3 community.</p>
+                </div>
           </div>
 
           <div class="col-lg-5" data-aos="fade">
-            <form action="https://formspree.io/f/xqkjlnqa" method="POST" class="php-email-form">
-              <h3>Get in touch</h3>
-              <p>We are a private non profit group open to those of South Asian Decent and thier families.</p>
-              <div class="row gy-3">
-
-                <div class="col-md-12">
-                  <input type="text" name="name" class="form-control" placeholder="Name" required>
-                </div>
-
-                <div class="col-md-12 ">
-                  <input type="email" class="form-control" name="email" placeholder="Email" required>
-                </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="phone" placeholder="Phone" required>
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your request has been sent successfully. Thank you!</div>
-
-                  <button type="submit">Connect</button>
+            <p></p>
                 </div>
 
               </div>
@@ -143,93 +127,13 @@
       </div>
     </section><!-- End Get Started Section -->
 
-    <!-- ======= Constructions Section ======= -->
-    <section id="constructions" class="constructions">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-header">
-          <h2>Focus Areas</h2>
-          <p>Though we have a large variety of groups we have a few areas we try to focus on.</p>
-        </div>
-
-        <div class="row gy-4">
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="card-item">
-              <div class="row">
-                <div class="col-xl-5">
-                  <div class="card-bg" style="background-image: url(assets/img/focusArea-1.jpg);"></div>
-                </div>
-                <div class="col-xl-7 d-flex align-items-center">
-                  <div class="card-body">
-                    <h4 class="card-title">New Brides</h4>
-                    <p>Specifically the wives of south asian men coming into the DFW area to work. Being home alone those first few weeks as a new bride in a strange area can be a stressful and trying time but its easier with some friends to help you manage.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="card-item">
-              <div class="row">
-                <div class="col-xl-5">
-                  <div class="card-bg" style="background-image: url(assets/img/focusArea-2.jpg);"></div>
-                </div>
-                <div class="col-xl-7 d-flex align-items-center">
-                  <div class="card-body">
-                    <h4 class="card-title">Fathers and Sons</h4>
-                    <p>Teaching Boys to be men is easier with a group. C3 for men helps fathers and sons navigate those hard years from 10 to 18 by offering outdoor activitees teach outdoor skills like camping, hiking and caring for what God has given us on this earth.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="card-item">
-              <div class="row">
-                <div class="col-xl-5">
-                  <div class="card-bg" style="background-image: url(assets/img/focusArea-3.jpg);"></div>
-                </div>
-                <div class="col-xl-7 d-flex align-items-center">
-                  <div class="card-body">
-                    <h4 class="card-title">Working Women</h4>
-                    <p>Between a full time job and a demanding family its hard to find "Me" time. With multiple groups doing multiple things every week it's easier to find a time to sneak away and laugh a bit with others going through the same thing</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="card-item">
-              <div class="row">
-                <div class="col-xl-5">
-                  <div class="card-bg" style="background-image: url(assets/img/focusArea-4.jpg);"></div>
-                </div>
-                <div class="col-xl-7 d-flex align-items-center">
-                  <div class="card-body">
-                    <h4 class="card-title">When Life Hurts</h4>
-                    <p>Life can be hard and sometimes it just plain hurts. Plans fail and you end up without anyone to turn to and no idea what to do. We aren't experts but sometimes just having a group to talk to over a cup of Chai can help.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Card Item -->
-
-        </div>
-
-      </div>
-    </section><!-- End Constructions Section -->
-
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
           <h2>Womens Groups</h2>
-          <p>The C3 membership is divided up into a variety of small groups of 100 or less Focused around a specific area of interest.</p>
+          <p>The C3 membership is divided up into a variety of small groups focused around a specific area of interest.</p>
         </div>
 
         <div class="row gy-4">
