Buttons on everything

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
                     <h3>Rise & shine(18-25)</h3>
                     <p>A group a young ladies who like to just hang out, hopefully</p>
-                    <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                    <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -173,7 +173,7 @@
                     </div>
                     <h3>Young ladies(25-30)</h3>
                     <p>Also a group of ladies that hang out</p>
-                    <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                    <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -183,7 +183,7 @@
                     </div>
                     <h3>Young & Social</h3>
                     <p>We have more time on our hands... Maybe</p>
-                    <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                    <button class="readmore stretched-link openModal" data-target="Young & Social" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -195,7 +195,7 @@
                     </div>
                     <h3>Fabulous 50's</h3>
                     <p>We are Fabulous As always</p>
-                    <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                    <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -205,7 +205,7 @@
                   </div>
                   <h3>Fabulous 60's</h3>
                   <p>Because we finally have the money to do what we want.</p>
-                  <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                  <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
               </div>
           </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -215,7 +215,7 @@
                   </div>
                   <h3>Single moms</h3>
                   <p>Single and free to do what we enjoy.</p>
-                  <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                  <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
               </div>
             </div>
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -225,7 +225,7 @@
                   </div>
                   <h3>Stay at home moms</h3>
                   <p>Cause stay at home doesnt actually mean stay at HOME</p>
-                  <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                  <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
               </div>
           </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -235,7 +235,7 @@
                   </div>
                   <h3>Golden Gems</h3>
                   <p>Because when the Inlaws come to visit, it's nice to get them out of my house for a bit.</p>
-                  <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                  <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
               </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -245,7 +245,7 @@
                     </div>
                     <h3>Hobbies</h3>
                     <p>Almost anything you can imagine</p>
-                    <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                    <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -255,7 +255,7 @@
                     </div>
                     <h3>Location Based groups</h3>
                     <p>Where ever you are there is a group for you, except if you are not around the Dallas area</p>
-                    <!--<a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>-->
+                    <button class="readmore stretched-link openModal" data-target="error" onclick="document.getElementById('target-section').scrollIntoView({ behavior: 'smooth' });">Learn more <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div><!-- End Service Item -->
 <div id="Pregnant Moms" class="modal">
@@ -283,15 +283,26 @@
       <h5>C3 Boys (Grades 3, 4, & 5)</h5>
       <h5>C3 Boys (Grades 6, 7, & 8)</h5>
       <h5>C3 Boys (Grades 9–12)</h5>
-      <p></p>
+      <p>All these groups are a fun, supportive space for boys and girls of all ages, getting Kids to face their one fear, socializing</p>
   </div>
 </div>
 
-<div id="modal3" class="modal">
+<div id="Young and Social" class="modal">
   <div class="modal-content">
       <span class="close">&times;</span>
-      <h2>A step forward and a step back</h2>
-      <p>:[</p>
+      <div style="text-align: center;"><h2>Young and Social</h2></div>
+      <p>This subgroup is a warm, welcoming space for women who are married and do not have children. C3 Young & Social offers a sense of belonging for those excited to build friendships, share experiences, and create cherished memories—whether you’re focused on your career, travel, personal growth, or simply enjoying quality time as a couple. Connect with others who appreciate marriage without the parenting focus, celebrate milestones, and lift each other up through lighthearted meetups that encourage personal growth and spark new traditions. It’s all about connection, exploration, and the chance to thrive—together!
+        What’s in Store:</p>
+        <p>Shared Experiences: Connect with others who appreciate the joys and day-to-day life of marriage without the parenting focus.</p>
+        <p>Community & Support: A supportive circle for discussing personal goals, celebrating milestones, and lifting each other up.</p>
+        <p>thearted Gatherings: Enjoy meetups tailored to your interests—balanced between fun, personal growth, and creating new traditions together.</p>
+        <p>C3 Young & Social is about connection, exploration, and support. It’s a space where women can bond over shared experiences in a vibrant space to flourish—together!</p>
+  </div>
+</div>
+<div id="error" class="modal">
+  <div class="modal-content">
+      <span class="close">&times;</span>
+      <div style="text-align: center;"><h2>Oops, This is still being worked on</h2></div>
   </div>
 </div>
 <!-- CSS Styles -->
